# magneturrent

./: LICENSE  README.md  dk-tm4c123g.cross  magdecode.py  magscope.py  meson.build  startup_gcc.c
driverlib/: meson.build
src/: button.c  button.h  extint.c  extint.h  heartbeat.c  heartbeat.h  i2c.c  i2c.h  interface.c  interface.h  lsm303dlhc.c  lsm303dlhc.h  main.c  model.c  model.h  sysmillis.c  sysmillis.h  uart.c  uart.h  watchdog.c  watchdog.h
