driverlib_sources = files([
    'adc.c',
    'aes.c',
    'can.c',
    'comp.c',
    'cpu.c',
    'crc.c',
    'des.c',
    'eeprom.c',
    'emac.c',
    'epi.c',
    'flash.c',
    'fpu.c',
    'gpio.c',
    'hibernate.c',
    'i2c.c',
    'interrupt.c',
    'lcd.c',
    'mpu.c',
    'onewire.c',
    'pwm.c',
    'qei.c',
    'shamd5.c',
    'ssi.c',
    'sw_crc.c',
    'sysctl.c',
    'sysexc.c',
    'systick.c',
    'timer.c',
    'uart.c',
    'udma.c',
    'usb.c',
    'watchdog.c'
])

driverlib = static_library('driverlib', driverlib_sources, include_directories : [inc])
